fix: artist cards slightly large on ios

--- a/styles/global.css
+++ b/styles/global.css
@@ -168,8 +168,8 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 200px;
-  height: 300px;
+  width: 250px;
+  height: 350px;
   margin: 0.5rem;
   cursor: pointer;
 }
